--- a/index.html
+++ b/index.html
@@ -3,17 +3,20 @@
 
 <head>
 
-	<!-- Required meta tags -->
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<!-- Meta tags -->
+	<meta charset="UTF-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 	<!-- Favicon  -->
-	<link rel="shortcut icon" href="images/Q.png" type="image/x-icon" />
+	<link rel="shortcut icon" href="assets/Q.png" type="image/x-icon" />
+
+	<!-- Font Awesome CSS -->
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" />
 
 	<!-- Styles -->
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.1/css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/style.css" />
+	<link rel="stylesheet" href="css/responsive.css" />
 
 	<!-- Website Title -->
 	<title>HTML-Quickstart-Pack</title>
@@ -25,18 +28,15 @@
 
 
 	<div class="container">
-		<div class="jumbotron">
-			<h1 class="display-3 text-center text-success">HTML-Quickstart-Pack</h1>
-		</div>
+
+		<h1>HTML-Quickstart-Pack</h1>
+
 	</div>
 
 
 
 	<!-- Scripts -->
-
-	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.1/js/bootstrap.min.js"></script>
+	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script> <!-- jQuery -->
 	<script src="js/main.js"></script> <!-- Custom script -->
 
 </body>
